syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.common";
option java_outer_classname = "ProductProto";

service ProductService {
  //ürün bilgisi çekmek için
  rpc GetProductById (ProductRequest) returns (ProductResponse);

  //stok düşmek için
  rpc ReduceStock (ReduceStockRequest) returns (ReduceStockResponse);
}

message ProductRequest {
  string productId = 1;
}

message ProductResponse {
  string productId = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4; // Stok bilgisini de ekledik
}

message ReduceStockRequest {
  string productId = 1;
  int32 quantity = 2;
}

message ReduceStockResponse {
  bool success = 1;
  int32 remainingStock = 2;
}